Bug 83043
Shortcut help messages are over wrapped and unreadable

My fix is to remove a "nowrap" from keys class (.shortcutKeys-panel). It means the keys can wrap, which does not look ideal (a bit hard to read, already in this pretty but a bit hard to read light on black colors), but at least text does not overlap. I think for the power users that use shortcuts, they would be able to figure out what's going on. :)

http://bugzilla.zimbra.com/show_bug.cgi?id=83043

Copied from Perforce
 Change: 492042

--- a/WebRoot/css/zm.css
+++ b/WebRoot/css/zm.css
@@ -4452,7 +4452,6 @@ HTML>BODY .appt-selected .appt_allday_body
 .shortcutKeys-panel {
 	@Text-disabled@
 	color:white;
-	white-space:nowrap;
 }
 
 .shortcutKeys-print {
